Added doughnut chart to dashboard, added meta data in message.properties, adjusted chart data in admin\dashboard.html

--- a/spring-boot/admin/src/main/resources/templates/admin/dashboard.html
+++ b/spring-boot/admin/src/main/resources/templates/admin/dashboard.html
@@ -92,6 +92,7 @@
                     loadStatisticsPerApiConsumerInDescendingOrderByNoOfCalls(dateRangeUrlSuffix);
                     loadChart('/admin/dashboard/httpResponseStatsChart' + dateRangeUrlSuffix, 'httpStatsChartCanvas');
                     loadChart('/admin/dashboard/userStatsDoughnutChart' + dateRangeUrlSuffix, 'userStatsChartCanvas');
+                    loadChart('/admin/dashboard/userStatsDoughnutChart' + dateRangeUrlSuffix, 'callsPerServiceChartCanvas');
                     loadChart('/admin/dashboard/statsPerDayLineChart' + dateRangeUrlSuffix, 'statsPerDayLineChartCanvas');
                 }
 
