--- a/spring-boot/admin/src/main/resources/templates/admin/fragments/scripts.html
+++ b/spring-boot/admin/src/main/resources/templates/admin/fragments/scripts.html
@@ -91,7 +91,9 @@
         <div th:fragment="initializeDataTables">
             <script>
                 $( document ).ready(function() {
-                    $('table[class*="default-data-table"]').DataTable();
+                    $('table[class*="default-data-table"]').DataTable( {
+                            "scrollX": true
+                        } );
                 });
             </script>
         </div>
