--- a/spring-boot/admin/src/main/resources/templates/home.html
+++ b/spring-boot/admin/src/main/resources/templates/home.html
@@ -149,6 +149,18 @@
                         <li>Create service API keys for your customers, allowing them to access your service</li>
                         <li>See statistics about usage of your services and money earned</li>
                     </ol>
+                    <div style="display: flex; justify-content: center;">
+                        <img src="images/flag_of_europe.svg" style="height:60px; margin-top:20px"/>
+                        <div style="padding: 15px;">
+                            <p style="font-size: 14px;">
+                                CoatRack has received funding from the European Union’s Horizon 2020 research and
+                                innovation programme in the scope of the
+                                <a href="https://iof2020.eu" target="_blank">IoF2020</a> project under grant
+                                agreement no. 731884
+                            </p>
+                        </div>
+                        <img src="images/logo_iof2020.svg" style="height:65px; margin-top:0px;"/>
+                    </div>
                 </article>
                 <!-- Get Started -->
                 <article id="getstarted">
